Got OCaml setup done.

--- a/src/ocaml/runner/dune
+++ b/src/ocaml/runner/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name adbench)
  (name main)
- (libraries adbench unix owl))
+ (libraries adbench_modules adbench_shared unix owl))
