--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory ("cpp")
 add_subdirectory ("dotnet")
 add_subdirectory ("julia")
 add_subdirectory ("python")
+add_subdirectory ("ocaml")
