--- a/src/ocaml/runner/dune
+++ b/src/ocaml/runner/dune
@@ -1,4 +1,10 @@
+(library
+ (name adbench_runner)
+ (modules Runner_benchmark)
+ (libraries adbench_modules adbench_shared unix owl))
+
 (executable
  (public_name adbench)
  (name main)
- (libraries adbench_modules adbench_shared unix owl))
+ (modules Main)
+ (libraries adbench_modules adbench_shared adbench_runner unix owl))
