Speed improvements hopefully.

--- a/src/ocaml/runner/dune
+++ b/src/ocaml/runner/dune
@@ -5,6 +5,7 @@
 
 (executable
  (public_name adbench)
+ (modes (native exe))
  (name main)
  (modules Main)
  (libraries adbench_modules adbench_shared adbench_runner unix owl))
